<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">UiTempletes</string>

    <string name="email">Email</string>
    <string name="username">Username</string>

    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="Reset_password">Reset Password</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="stay_signed_in">Stay signed in</string>

    <string name="CREATE_AN_ACCOUNT">Create an Account</string>

    <string name="can_not_be_empty">Can not be empty</string>
    <string name="email_is_not_valid">Email address is not valid</string>
    <string name="password_is_not_valid">Password is not valid</string>
    <string name="full_name">Full name</string>
    <string name="passwords_does_not_match">Passwords does not match</string>
    <string name="no_default_browser_found">No Default Browser Found</string>
    <string name="you_are_offline_please_check_your_internet_connection">You are offline please check your internet connection</string>
    <string name="correct">Correct</string>
    <string name="cancel">Cancel</string>

    <string name="loading_please_wait">Loading, please wait</string>
    <string name="signing_in" tools:ignore="TypographyEllipsis">Signing in...</string>
    <string name="signing_up" tools:ignore="TypographyEllipsis">Signing up...</string>
    <string name="no_internet_connection">No Internet Connection</string>

</resources>
