<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    tools:context=".ui.activity.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_email"
                tools:ignore="RtlHardcoded" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_500"
                app:errorEnabled="true">

                <com.ls.uitempletes.ui.views.font.FontEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey_600"
                    android:textSize="18sp"
                    android:theme="@style/EditText.Normal"
                    app:customFont="@string/Roboto_Regular" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_user" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/filFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_500"
                app:errorEnabled="true">

                <com.ls.uitempletes.ui.views.font.FontEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/grey_600"
                    android:textSize="18sp"
                    android:theme="@style/EditText.Normal"
                    app:customFont="@string/Roboto_Regular" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_500"
                app:errorEnabled="true">

                <com.ls.uitempletes.ui.views.font.FontEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_600"
                    android:textSize="18sp"
                    android:theme="@style/EditText.Normal"
                    app:customFont="@string/Roboto_Regular" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/grey_500"
            app:errorEnabled="true">

            <com.ls.uitempletes.ui.views.font.FontEditText
                android:id="@+id/edtRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="@color/grey_600"
                android:textSize="18sp"
                android:theme="@style/EditText.Normal"
                app:customFont="@string/Roboto_Regular" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:theme="@style/Button.Raised" />

    </LinearLayout>
</ScrollView>



