<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:background="@color/white">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue_400"
            android:elevation="4dp"
            app:title="@string/sign_in"
            tools:ignore="UnusedAttribute"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp"
                    android:layout_margin="24dp"
                    android:background="@drawable/circle_grey"
                    android:layout_gravity="center">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_user_large"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"
                        tools:ignore="RtlHardcoded"/>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_500">

                    <com.ls.uitempletes.ui.views.font.FontEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textSize="18sp"
                            android:inputType="textEmailAddress"
                            app:customFont="@string/Roboto_Regular"
                            android:theme="@style/EditText.Normal"
                            android:textColor="@color/grey_500"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"/>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_500">

                    <com.ls.uitempletes.ui.views.font.FontEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textSize="18sp"
                            android:inputType="textPassword"
                            app:customFont="@string/Roboto_Regular"
                            android:theme="@style/EditText.Normal"
                            android:textColor="@color/grey_500"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:gravity="right">

                <Button
                        android:id="@+id/btnResetPassword"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Reset_password"
                        android:textSize="12sp"
                        android:textColor="@color/blue_500"
                        android:theme="@style/Button.Flat"/>

                <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:theme="@style/Button.Raised"
                        android:layout_margin="16dp"
                        android:textColor="@color/white"
                        android:layout_gravity="right"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>

    <LinearLayout
            android:id="@+id/viewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:background="@drawable/selector_grey">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"/>

        <com.ls.uitempletes.ui.views.font.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_500"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/CREATE_AN_ACCOUNT"
                android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
